--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "firebase": "^11.7.3",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-media-recorder": "^1.7.1",
+    "react-voice-visualizer": "^2.0.8",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
